# MiniScheme

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.md  a.ss  church.ss  config.h.in  configure  configure.ac  hard.ss  interp.py  repl.ss  run.sh  sexpr.ss  support.md  zekin
cmp/: a.ss  barrier.ss  f.c  f.out  f.py  f.ss  hard.ss  t.py  t.ss
doc/: reference.md
lib/: config  cps-ext  easy  ext.ss  hofun.ss  library.ss  macro.ss  stand.ss  standard  std.ss
lib/cps_module/: cps.ss
lib/easy_module/: io.ss  list.ss
lib/std_module/: common.ss  exten.ss  hofun.ss  list.ss  math.ss
scripts/: srcMakefile
src/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  Ref.url  eval.c  eval.h  ext.ss  func.c  func.h  gc.c  gc.h  io.c  io.h  leak.py  lib.ss  macro.c  macro.h  main.c  main.h  mem.c  mem.h  memory.c  memory.h  mini-scheme.scm  nopt.c  opt.c  opt.h  out  parse.c  parse.h  proc.c  proc.h  r.ss  repl.ss  stuck.ss  syntax.c  syntax.h  token.c  (+6 more)
src/test/: a.ss  b.ss  c.ss  cps-fact.ss  d.ss  f.ss  test.ss
test/: a.ss  b.ss  cps-fact.ss  cps-tail.ss  custom.ss  env.ss  fact.ss  g.ss  hello.ss  mini-scheme.scm  tail.ss  test.ss  yatail.ss
zekin/: Makefile  README.md  TODO.md  eval.c  eval.h  ext.ss  func.c  func.h  gc.c  gc.h  main.c  main.exe.stackdump  main.h  mem.c  mem.h  parse.c  parse.h  proc.c  proc.h  ref.md  ref.url  sexpr.ss  stuck.ss  syntax.c  syntax.h  token.c  token.h  tstLeak.py  type.c  type.h  util.c  util.h  zekin
